--- a/ExportDrawbackManagementPortal/web.config
+++ b/ExportDrawbackManagementPortal/web.config
@@ -134,66 +134,7 @@
 		</logOffCallBacks>
 	</ssoClientSection>
 	<system.serviceModel>
-		<bindings>
-   <wsHttpBinding>
-    <binding name="WSHttpBinding_IOguReader" closeTimeout="00:01:00"
-     openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
-     bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
-     maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text"
-     textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
-     <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
-      maxBytesPerRead="4096" maxNameTableCharCount="16384" />
-     <reliableSession ordered="true" inactivityTimeout="00:10:00"
-      enabled="false" />
-     <security mode="None">
-      <transport clientCredentialType="Windows" proxyCredentialType="None"
-       realm="" />
-      <message clientCredentialType="Windows" negotiateServiceCredential="true" />
-     </security>
-    </binding>
-    <binding name="WSHttpBinding_IAccreditReader" closeTimeout="00:01:00"
-     openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
-     bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
-     maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text"
-     textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
-     <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
-      maxBytesPerRead="4096" maxNameTableCharCount="16384" />
-     <reliableSession ordered="true" inactivityTimeout="00:10:00"
-      enabled="false" />
-     <security mode="None">
-      <transport clientCredentialType="Windows" proxyCredentialType="None"
-       realm="" />
-      <message clientCredentialType="Windows" negotiateServiceCredential="true" />
-     </security>
-    </binding>
-    <binding name="WSHttpBinding_IAuthenticationReader" closeTimeout="00:01:00"
-     openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
-     bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
-     maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text"
-     textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
-     <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
-      maxBytesPerRead="4096" maxNameTableCharCount="16384" />
-     <reliableSession ordered="true" inactivityTimeout="00:10:00"
-      enabled="false" />
-     <security mode="None">
-      <transport clientCredentialType="Windows" proxyCredentialType="None"
-       realm="" />
-      <message clientCredentialType="Windows" negotiateServiceCredential="true" />
-     </security>
-    </binding>
-   </wsHttpBinding>
-  </bindings>
-		<client>
-   <endpoint address="http://10.62.1.72/CupaaCenterService/OguReaderService.svc/ws"
-    binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IOguReader"
-    contract="OguReaderService.IOguReader" name="WSHttpBinding_IOguReader" />
-   <endpoint address="http://10.62.1.72/CupaaCenterService/AccreditReaderService.svc/ws"
-    binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IAccreditReader"
-    contract="AccreditReaderService.IAccreditReader" name="WSHttpBinding_IAccreditReader" />
-   <endpoint address="http://10.62.1.72/CupaaCenterService/AuthenticationReaderService.svc/ws"
-    binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IAuthenticationReader"
-    contract="AuthenticationReaderService.IAuthenticationReader"
-    name="WSHttpBinding_IAuthenticationReader" />
-  </client>
+		<bindings />
+		<client />
 	</system.serviceModel>
 </configuration>
