--- a/ExportDrawbackManagementPortal/Config/ConnectionStrings.config
+++ b/ExportDrawbackManagementPortal/Config/ConnectionStrings.config
@@ -8,4 +8,5 @@
     providerName="System.Data.OracleClient" />-->
   <!--ms sql数据库连接字符串-->
   <add name="ExportDrawbackManagementConnection" connectionString="Database=exportDrawback;Server=.;uid=exportDrawback_user;pwd=AAAaaa111;" providerName="System.Data.SqlClient" />
+  <add name="KingDeeConnection" connectionString="Database=xmhc;Server=.;uid=exportDrawback_user;pwd=AAAaaa111;" providerName="System.Data.SqlClient" />
 </connectionStrings>
