--- a/ExportDrawbackManagement.Biz.Library/ExportDrawbackManagement.Biz.Library.csproj
+++ b/ExportDrawbackManagement.Biz.Library/ExportDrawbackManagement.Biz.Library.csproj
@@ -106,6 +106,7 @@
     <Compile Include="ContractManager.cs" />
     <Compile Include="EntryManager.cs" />
     <Compile Include="Factory\LocalBizFactory.cs" />
+    <Compile Include="ProfitBudgetManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaxListManager.cs" />
     <Compile Include="UsersManager.cs" />
